syntax = "proto3";

package NativeToken;

message GetNativeTokenInput {
  string provider = 1;
  string chain = 2;
}

message GetNativeTokenOutput { float usd = 1; }